--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Explore</a>
+                <a class="navbar-brand" href="#page-top">Start Explore</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile2.jpg" alt="">
+                    <img class="img-responsive" src="img/profile2.JPG" alt="profile2.PNG">
                     <div class="intro-text">
                         <span class="name">Suzzane De guzman Pi-is</span>
                         <hr class="star-light">
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/myresume.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/myresume.JPG" class="img-responsive" alt="myresume.PNG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/project.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/project.JPG" class="img-responsive" alt="project.PNG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -306,7 +306,7 @@
                         <div class="modal-body">
                             <h2>Resume</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/myresume.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/myresume.JPG" class="img-responsive img-centered" alt="myresume.PNG">
                             <p><a href="file:///C:/Users/zane/Desktop/pi-is.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -343,7 +343,7 @@
                         <div class="modal-body">
                             <h2>My Project</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/project.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/project.JPG" class="img-responsive img-centered" alt="project.PNG">
                             <p><a href="file:///C:/Users/zane/Desktop/Web.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
