--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/soulcars.jpg" class="img-responsive" alt="soulcars.JPG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -380,8 +380,8 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.JPG">
+                            <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
