--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Soul Cars</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.JPG">
+                            <img src="img/portfolio/soulcars.JPG" class="img-responsive img-centered" alt="soulcars.jpg">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
