--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="modal-body">
                             <h2>Soul Cars</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/soulcars.JPG" class="img-responsive img-centered" alt="soulcars.jpg">
+                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.JPG">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
