--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile3.jpg" alt="profile2.JPG">
+                    <img class="img-responsive" src="img/profile3.jpg" alt="profile3.JPG">
                     <div class="intro-text">
                         <span class="name">Suzzane De guzman Pi-is</span>
                         <hr class="star-light">
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/soulcars.jpg" class="img-responsive" alt="soulcars.JPG">
+                        <img src="img/portfolio/soulcars.JPG" class="img-responsive" alt="soulcars.jpg">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -380,7 +380,7 @@
                         <div class="modal-body">
                             <h2>Soul Cars</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.JPG">
+                            <img src="img/portfolio/soulcars.JPG" class="img-responsive img-centered" alt="soulcars.jpg">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
