--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/soulcars.jpg" class="img-responsive" alt="soulcars.jpg">
+                        <img src="img/portfolio/soulcars.jpg" class="img-responsive" alt="soulcars.JPG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -307,7 +307,7 @@
                             <h2>Resume</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/myresume.jpg" class="img-responsive img-centered" alt="myresume.JPG">
-                            <p><a href="file:///C:/Users/zane/Desktop/pi-is.html">Click Me</a></p>
+                            <p><a href="file:///C:/Users/ITE32C-4/Desktop/pi-is.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Guest</a>
@@ -344,7 +344,7 @@
                             <h2>My Project</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/project.jpg" class="img-responsive img-centered" alt="project.JPG">
-                            <p><a href="file:///C:/Users/zane/Desktop/Web.html">Click Me</a></p>
+                            <p><a href="file:///C:/Users/ITE32C-4/Desktop/Web.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Guest</a>
@@ -380,7 +380,7 @@
                         <div class="modal-body">
                             <h2>Soul Cars</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.jpg">
+                            <img src="img/portfolio/soulcars.jpg" class="img-responsive img-centered" alt="soulcars.JPG">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
