--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/soulcars.png" class="img-responsive" alt="soulcars.PNG">
+                        <img src="img/portfolio/soulcars.PNG" class="img-responsive" alt="soulcars.png">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -380,7 +380,7 @@
                         <div class="modal-body">
                             <h2>Soul Cars</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/soulcars.png" class="img-responsive img-centered" alt="soulcars.PNG">
+                            <img src="img/portfolio/soulcars.PNG" class="img-responsive img-centered" alt="soulcars.png">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
