--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/forbidden love.jpg" class="img-responsive" alt="forbidden love.JPG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -310,7 +310,7 @@
                             <p><a href="file:///C:/Users/ITE32C-4/Desktop/pi-is.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Guest</a>
+                                    <strong><a href="http://startbootstrap.com">My resume</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -347,7 +347,7 @@
                             <p><a href="file:///C:/Users/ITE32C-4/Desktop/Web.html">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Guest</a>
+                                    <strong><a href="http://startbootstrap.com">Project</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -384,11 +384,11 @@
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">Soul Cars</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -417,15 +417,15 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/forbidden love.jpg" class="img-responsive img-centered" alt="forbidden love.JPG">
+                            <p><a href="https://suzzane.github.io/forbidden-love.github.io/">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">forbidden love</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
