--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/forbidden love.jpg" class="img-responsive" alt="forbidden love.JPG">
+                        <img src="img/portfolio/forbidden love.JPG" class="img-responsive" alt="forbidden love.jpg">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -417,7 +417,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/forbidden love.jpg" class="img-responsive img-centered" alt="forbidden love.JPG">
+                            <img src="img/portfolio/forbidden love.JPG" class="img-responsive img-centered" alt="forbidden love.jpg">
                             <p><a href="https://suzzane.github.io/forbidden-love.github.io/">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
