--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/foodcarving.jpg" class="img-responsive" alt="foodcarving.JPG">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -378,7 +378,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Soul Cars</h2>
+                            <h2>Soul Cars-Blog</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/soulcars.PNG" class="img-responsive img-centered" alt="soulcars.png">
                             <p><a href="https://suzzane.github.io/Soul-Cars.github.io/">Click Here</a></p>
@@ -415,7 +415,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Forbidden Love-single</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/forbidden love.JPG" class="img-responsive img-centered" alt="forbidden love.jpg">
                             <p><a href="https://suzzane.github.io/forbidden-love.github.io/">Click Me</a></p>
@@ -452,17 +452,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Food Carving-Ecommerce</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/foodcarving.jpg" class="img-responsive img-centered" alt="foodcarving.JPG">
+                            <p><a href="https://suzzane.github.io/food-carving.github.io/">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">Food Carving</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
