--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/forbidden love.JPG" class="img-responsive" alt="forbidden love.jpg">
+                        <img src="img/portfolio/forbidden.PNG" class="img-responsive" alt="forbidden.png">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/foodcarving.jpg" class="img-responsive" alt="foodcarving.JPG">
+                        <img src="img/portfolio/carving.PNG" class="img-responsive" alt="carving.png">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -149,7 +149,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/thekitchen.jpg" class="img-responsive" alt="thekitchen.JPG">
+                        <img src="img/portfolio/thekitchen.PNG" class="img-responsive" alt="thekitchen.png">
                     </a>
                 </div>
             </div>
@@ -417,7 +417,7 @@
                         <div class="modal-body">
                             <h2>Forbidden Love-single</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/forbidden love.JPG" class="img-responsive img-centered" alt="forbidden love.jpg">
+                            <img src="img/portfolio/forbidden.PNG" class="img-responsive img-centered" alt="forbidden.png">
                             <p><a href="https://suzzane.github.io/forbidden-love.github.io/">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -454,7 +454,7 @@
                         <div class="modal-body">
                             <h2>Food Carving-Ecommerce</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/foodcarving.jpg" class="img-responsive img-centered" alt="foodcarving.JPG">
+                            <img src="img/portfolio/carving.PNG" class="img-responsive img-centered" alt="carving.png">
                             <p><a href="https://suzzane.github.io/food-carving.github.io/">Click Me</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -491,7 +491,7 @@
                         <div class="modal-body">
                             <h2>The Kitchen-Full</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/thekitchen.jpg" class="img-responsive img-centered" alt="thekitchen.JPG">
+                            <img src="img/portfolio/thekitchen.PNG" class="img-responsive img-centered" alt="thekitchen.png">
                             <p><a href="https://suzzane.github.io/The-Kitchen.github.io/index.html">Click Here</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
