--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/glen.jpg" alt="glen.JPG">
+                    <img class="img-responsive" src="img/glen.JPG" alt="glen.jpg">
                     <div class="intro-text">
                         <span class="name">Suzzane De guzman Pi-is</span>
                         <hr class="star-light">
